Closed
Bug 151074
Opened 23 years ago
Closed 23 years ago
[have-fix] regression: Default plugin shows for ActiveX controls and hides Netscape plugin (users sent to PFS to fetch plugin for application/x-oleobject)
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Core Graveyard
Plug-ins
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.1beta
People
(Reporter: joao, Assigned: peterl-bugs)
References
()
Details
(Keywords: regression, testcase, top100)
Attachments
(2 files)
1.80 KB,
text/html
|
Details | |
1.79 KB,
patch
|
bryner
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.1a) Gecko/20020611
BuildID: 2002061104
This worked on Mozilla 1.0. I have tried downgrading to Mozilla 1.0 and it
worked again. So it seems it has been broken in the latest nightly builds.
Reproducible: Always
Steps to Reproduce:
1. Go to http://www.sic.pt/index.php?article=450&visual=10&layout=24&box=-1
2. Click on one of the links pointing to a Windows Media stream
3. Click on one of the links pointing to a Quicktime stream
Actual Results: Quicktime plugin works. Windows Media does not.
Expected Results: Windows Media plugin should work because it is installed.
Copied from About:plugins page:
Microsoft (R) DRM
File name: C:\Program Files\Windows Media Player\npdrmv2.dll
Windows Media Player Plug-in Dynamic Link Library
File name: C:\Program Files\Windows Media Player\npdsplay.dll
Microsoft® Windows Media Services
File name: C:\Program Files\Windows Media Player\npwmsdrm.dll
Comment 1•23 years ago
|
||
using a current build (20020610) I selected on the left side Pais, then selected
the video with the pit bull -- a disgusting video of a dog fight btw -- and both
QT and WMP played the video.
I will try the 20020611 build next
Comment 2•23 years ago
|
||
:) i just tried 0611 brnch on XP professional edition. this WFM just fine.
Comment 3•23 years ago
|
||
marking as WFM: reporter please ensure you have the latest version of WMP as well.
Status: UNCONFIRMED → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
Reporter | ||
Comment 5•23 years ago
|
||
This is strange. I uninstalled Mozilla and removed its directory, installed the
latest build (2002061308) and it still doesn't work for me :-(
I have the latest version of WMP (8.0).
Could you please check the following links:
http://www.peuplemigrateur.com/ba_rm.htm (Real Video)
http://www.peuplemigrateur.com/ba_wmv.htm (Windows Media)
http://www.peuplemigrateur.com/ba_mov.htm (Quicktime)
Although I have the above 3 plugins installed, only Quicktime is recognized.
Is this a Mozilla problem, or is the HTML non-standard?
Reporter | ||
Comment 6•23 years ago
|
||
I'm afraid I will have to reopen this bug.
I've spoken with other Windows users and they all have been experiencing the
same problems in getting the WMP plugin to work in the latest Mozilla builds.
Try, for instance the following sites:
http://www.msnbc.com/news/775195.asp (click on "Play Video")
http://www.sky.com/skynews/home (click on "Video")
Status: VERIFIED → UNCONFIRMED
Resolution: WORKSFORME → ---
Comment 7•23 years ago
|
||
confirming using build 2002070508 on Win2k (trunk) + WMP7.1, which also stopped
working on some sites 10 days ago.
Something must have changed in the plug-in handler or in the way the <embed> tag
is parsed because it used to work flawlessly for me since 1,5 years, now it
displays the generic Netscape 'click here to get plug-in'.
Possible bug checkins causing this: bug 152334, bug 153920.
Didn't find dupes, marking NEW.
Comment 8•23 years ago
|
||
Comment 10•23 years ago
|
||
ooo...this is a serious bug. It will cause us to show the default plugin by
mistake for ActiveX controls. We'll run into this situation quite frequently.
Thanks for the testcase, I have a fix comming.
It looks like we are missing reading the "classid" attribute, dispite it being
there and that is causing us to go down a really WRONG codepath. Changing the
namespace to 'kNameSpaceID_None' (to make it work like "codebase" does above),
lets us complete the correct code path.
This "regression" seems to have been here for a while but I think I unmasked the
problem recently with the checkin to bug 134445 which allows the default plugin
to show for the OBJECT tag. It's NOT supposed to show for ActiveX controls. We
use the "classid" attribute to detect ActiveX and mis-reading that attribute in
this piece of code is causing the problem.
Assignee: beppe → peterl
Severity: major → critical
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Summary: Windows Media Player plugin stopped working → [have-fix] regression: Default plugin shows for ActiveX controls and hides Netscape plugin (users sent to PFS to fetch plugin for application/x-oleobject)
Whiteboard: [PL RTM]
Target Milestone: --- → mozilla1.0.1
Comment 11•23 years ago
|
||
This patch changes:
mContent->GetNameSpaceID(nameSpaceID);
mContent->GetAttr(nameSpaceID, nsHTMLAtoms::classid, classid)
to just:
mContent->GetAttr(kNameSpaceID_None, nsHTMLAtoms::classid, classid)
Comment 12•23 years ago
|
||
*** Bug 151772 has been marked as a duplicate of this bug. ***
Comment 13•23 years ago
|
||
*** Bug 142036 has been marked as a duplicate of this bug. ***
Comment 14•23 years ago
|
||
Comment on attachment 90397 [details] [diff] [review]
patch v.1
sr=jst
Attachment #90397 -
Flags: superreview+
Comment 15•23 years ago
|
||
uuhh is this getting fixed finaly?
but: second testcase should work, right? (it opens embeded wmp but then causes
an error.could be another bug so i am asking...)
Comment 16•23 years ago
|
||
Jan, my testcase links to a french site movie trailer, the link must have
expired. I only created the testcase to show WMP wasn't being loaded for the
first one.
Comment 17•23 years ago
|
||
can you please provide any testcase (here or via mail) that is simlar, cause
embeded WMP seems to do not WMF in 1.0 release.(mmh will try on my own to find
anyone on the web else.
Comment 18•23 years ago
|
||
Comment on attachment 90397 [details] [diff] [review]
patch v.1
r=bryner
Attachment #90397 -
Flags: review+
Comment 19•23 years ago
|
||
patch in trunk, marking FIXED.
Removing branch nominations. This problem does not appear to happen on the
branch. This could have been a regression to the changes to
|nsGenericHTMLElement:GetAtrr| in bug 134278.
Status: NEW → RESOLVED
Closed: 23 years ago → 23 years ago
Keywords: adt1.0.1,
mozilla1.0.1,
nsbeta1,
review
Resolution: --- → FIXED
Whiteboard: [PL RTM]
Target Milestone: mozilla1.0.1 → mozilla1.1beta
Comment 20•23 years ago
|
||
Yes, this was a trunk-only regression from bug 134278.
Comment 21•23 years ago
|
||
build 2002070804 on Win2k (trunk) works fine on our Intranet (where it failed
previously) and skynews.
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•