Fixing regression: Default plugin shows for ActiveX controls and hides Netscape plugin (users sent to PFS to fetch plugin for application/x-oleobject), bug 151074 r=bryner sr=jst